feat: 메뉴 및 비밀번호 변경 모달 로직 추가

--- a/css/reset.css
+++ b/css/reset.css
@@ -113,7 +113,10 @@ select {
 input::placeholder {
   font-family: "Pretendard", sans-serif;
 }
-
+button,
+a {
+  font-family: "Pretendard", Arial, sans-serif;
+}
 .clear:after {
   content: "";
   display: block;
