--- a/css/login/pwFind.css
+++ b/css/login/pwFind.css
@@ -1,4 +1,4 @@
-#pwModal {
+.pw-modal-container {
   position: fixed;
   left: 0;
   top: 0;
@@ -11,12 +11,12 @@
   transition: 0.3s;
 }
 
-#pwModal.active {
+.pw-modal-container.active {
   opacity: 1;
   visibility: visible;
 }
 
-#pwModal .pw-modal-content {
+.pw-modal-container .pw-modal-content {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -29,7 +29,7 @@
   padding: 18px 18px 16px;
 }
 
-#pwModal .pw-modal-close {
+.pw-modal-container .pw-modal-close {
   position: absolute;
   right: 14px;
   top: 12px;
@@ -44,30 +44,30 @@
   transition: 0.3s;
 }
 
-#pwModal .pw-modal-close:hover {
+.pw-modal-container .pw-modal-close:hover {
   background: rgba(0, 0, 0, 0.06);
   border-radius: 8px;
 }
 
-#pwModal h2 {
+.pw-modal-container h2 {
   font-size: 16px;
   font-weight: 700;
   color: #222;
   margin: 2px 0 6px;
 }
 
-#pwModal p {
+.pw-modal-container p {
   font-size: 12px;
   color: #7a7a7a;
   margin: 0 0 14px;
   line-height: 1.4;
 }
 
-#pwModal .modal-field {
+.pw-modal-container .modal-field {
   margin-top: 12px;
 }
 
-#pwModal .modal-label {
+.pw-modal-container .modal-label {
   display: block;
   font-size: 12px;
   font-weight: 600;
@@ -75,7 +75,7 @@
   margin: 0 0 6px;
 }
 
-#pwModal .modal-input {
+.pw-modal-container .modal-input {
   width: 100%;
   height: 40px;
   border: 1px solid #bbb;
@@ -86,17 +86,17 @@
   background: #fff;
 }
 
-#pwModal .modal-input:disabled {
+.pw-modal-container .modal-input:disabled {
   background-color: #f6f6f6;
 }
 #authField {
   display: none;
 }
-#pwModal .pw-input::placeholder {
+.pw-modal-container .pw-input::placeholder {
   color: #b6b6b6;
 }
 
-#pwModal .pw-submit {
+.pw-modal-container .pw-submit {
   width: 100%;
   height: 40px;
   border: 0;
@@ -110,11 +110,11 @@
   transition: 0.2s;
 }
 
-#pwModal .pw-submit:hover {
+.pw-modal-container .pw-submit:hover {
   background-color: #4f93c7;
 }
 
-#pwModal .pw-submit:active {
+.pw-modal-container .pw-submit:active {
   transform: translateY(1px);
 }
 
